10-Istio/demo/01-basic-setup/demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
